--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -156,7 +156,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:layout_toRightOf="@+id/tv_tc"
-            android:checked="true" />
+             />
         <TextView
             android:id="@+id/tv_tc"
             android:textColor="#000000"
@@ -200,7 +200,7 @@
             android:layout_height="wrap_content">
             <RadioButton
                 android:layout_weight="8"
-                android:id="@+id/checkbox"
+                android:id="@+id/checkboxTTGH"
                 android:checked="true"
                 android:buttonTint="#00a5ff"
                 android:layout_width="wrap_content"
