--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".User.Fragment.OrderFragment">
 
+    <FrameLayout
+        android:id="@+id/fragmentOrderSucess"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarCTSP"
         android:layout_width="match_parent"
@@ -20,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:maxLines="1"
-            android:text="Đơn hàng"
+            android:text="Trạng thái Đơn hàng"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold" />
@@ -42,17 +50,17 @@
         android:layout_width="match_parent"
         android:layout_marginBottom="60dp"
         android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:textSize="17dp"
-            android:textStyle="bold"
-            android:textColor="#00a5ff"
-            android:text="Bạn chưa đăt mua sản phẩm nào."/>
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textAlignment="center"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:textSize="17dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="#00a5ff"-->
+<!--            android:text="Bạn chưa đăt mua sản phẩm nào."/>-->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/lv_donhangcuatoi"
+            android:id="@+id/lv_orderdetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </androidx.recyclerview.widget.RecyclerView>
@@ -66,18 +74,6 @@
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
-       <Button
-           android:layout_weight="5"
-           android:layout_width="match_parent"
-           android:layout_height="50dp"
-           android:background="@drawable/bg_vanchuyen"
-           android:gravity="center"
-           android:text="Hủy đơn hàng"
-           android:textAllCaps="false"
-           android:textColor="#00a5ff"
-           android:layout_marginRight="5dp"
-           android:textSize="16dp"
-           />
        <Button
            android:id="@+id/btnLienheOrder"
            android:layout_weight="5"
@@ -93,4 +89,6 @@
             />
    </LinearLayout>
     </RelativeLayout>
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
