--- a/app/src/main/res/drawable/bg_cmt.xml
+++ b/app/src/main/res/drawable/bg_cmt.xml
@@ -3,5 +3,6 @@
     <solid android:color="@android:color/transparent"/>
     <stroke android:width="1dp"
         android:color="#00a5ff"/>
-    <corners android:radius="6dp" />
+    <corners android:radius="56dp" />
+    <solid android:color="#fafafa" />
 </shape>
