--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,8 +112,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginLeft="12dp"
-                                android:layout_marginRight="12dp"
+                                android:layout_marginLeft="18dp"
+                                android:layout_marginRight="30dp"
                                 android:background="@android:color/transparent"
                                 android:drawableStart="@drawable/ic_lock"
                                 android:drawableLeft="@drawable/ic_lock"
@@ -123,39 +123,16 @@
                                 android:inputType="textPassword"
                                 android:minWidth="320dp"
                                 android:minHeight="50dp" />
-
+                            <ImageView
+                                android:id="@+id/imgeyelo"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginRight="20px"
+                                android:layout_marginTop="35px"
+                                android:layout_gravity="right"
+                                android:onClick="ShowHidePass"
+                                android:src="@drawable/showeye" />
                         </androidx.cardview.widget.CardView>
-
-                        <!--                        <EditText-->
-                        <!--                            android:id="@+id/edtEmailLo"-->
-                        <!--                            style="@style/modifiedEditText"-->
-                        <!--                            android:layout_marginTop="20dp"-->
-                        <!--                            android:hint="Email"-->
-                        <!--                            android:inputType="textEmailAddress"-->
-                        <!--                            android:maxLines="1" />-->
-
-                        <!--                        <LinearLayout-->
-                        <!--                            android:layout_width="match_parent"-->
-                        <!--                            android:layout_height="wrap_content"-->
-                        <!--                            android:orientation="horizontal"-->
-                        <!--                            android:weightSum="10">-->
-
-                        <!--                            <EditText-->
-                        <!--                                android:id="@+id/edtPassLo"-->
-                        <!--                                style="@style/modifiedEditText"-->
-                        <!--                                android:layout_weight="7"-->
-                        <!--                                android:hint="Mật khẩu"-->
-                        <!--                                android:inputType="textPassword" />-->
-
-                        <!--                            <ImageView-->
-                        <!--                                android:id="@+id/imgeyelo"-->
-                        <!--                                android:layout_width="40dp"-->
-                        <!--                                android:layout_height="30dp"-->
-                        <!--                                android:layout_gravity="bottom"-->
-                        <!--                                android:layout_weight="3"-->
-                        <!--                                android:onClick="ShowHidePass"-->
-                        <!--                                android:src="@drawable/showeye" />-->
-                        <!--                        </LinearLayout>-->
 
                         <CheckBox
                             android:id="@+id/checkbox_login"
