--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -221,8 +221,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginLeft="12dp"
-                                android:layout_marginRight="12dp"
+                                android:layout_marginLeft="18dp"
+                                android:layout_marginRight="30dp"
                                 android:background="@android:color/transparent"
                                 android:drawableStart="@drawable/ic_lock"
                                 android:drawableLeft="@drawable/ic_lock"
@@ -232,6 +232,15 @@
                                 android:minWidth="320dp"
                                 android:minHeight="50dp"
                                 android:singleLine="true" />
+                            <ImageView
+                                android:id="@+id/imgeyere"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginRight="20px"
+                                android:layout_marginTop="35px"
+                                android:layout_gravity="right"
+                                android:onClick="ShowHidePassRe"
+                                android:src="@drawable/showeye" />
                         </androidx.cardview.widget.CardView>
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -249,8 +258,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginLeft="12dp"
-                                android:layout_marginRight="12dp"
+                                android:layout_marginLeft="18dp"
+                                android:layout_marginRight="30dp"
                                 android:background="@android:color/transparent"
                                 android:drawableStart="@drawable/ic_lock"
                                 android:drawableLeft="@drawable/ic_lock"
@@ -260,49 +269,16 @@
                                 android:minWidth="320dp"
                                 android:minHeight="50dp"
                                 android:singleLine="true" />
+                            <ImageView
+                                android:id="@+id/imgeyereconfirm"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginRight="20px"
+                                android:layout_marginTop="35px"
+                                android:layout_gravity="right"
+                                android:onClick="ShowHidePassReConfirm"
+                                android:src="@drawable/showeye" />
                         </androidx.cardview.widget.CardView>
-<!--                        <LinearLayout-->
-<!--                            android:orientation="horizontal"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:weightSum="10"-->
-<!--                            android:layout_height="wrap_content">-->
-<!--                            <EditText-->
-<!--                                android:id="@+id/edtPassRe"-->
-<!--                                style="@style/modifiedEditText"-->
-<!--                                android:hint="Mật khẩu"-->
-<!--                                android:layout_weight="7"-->
-<!--                                android:inputType="textPassword"-->
-<!--                                />-->
-<!--                            <ImageView-->
-<!--                                android:layout_gravity="bottom"-->
-<!--                                android:id="@+id/imgeyere"-->
-<!--                                android:layout_weight="3"-->
-<!--                                android:layout_width="40dp"-->
-<!--                                android:layout_height="30dp"-->
-<!--                                android:onClick="ShowHidePassRe"-->
-<!--                                android:src="@drawable/showeye"/>-->
-<!--                        </LinearLayout>-->
-<!--                        <LinearLayout-->
-<!--                            android:orientation="horizontal"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:weightSum="10"-->
-<!--                            android:layout_height="wrap_content">-->
-<!--                            <EditText-->
-<!--                                android:id="@+id/edtConfirmPassRe"-->
-<!--                                style="@style/modifiedEditText"-->
-<!--                                android:hint="Nhập lại mật khẩu"-->
-<!--                                android:layout_weight="7"-->
-<!--                                android:inputType="textPassword"-->
-<!--                                />-->
-<!--                            <ImageView-->
-<!--                                android:layout_gravity="bottom"-->
-<!--                                android:id="@+id/imgeyecofirmre"-->
-<!--                                android:layout_weight="3"-->
-<!--                                android:layout_width="40dp"-->
-<!--                                android:layout_height="30dp"-->
-<!--                                android:onClick="ShowHidePassReConfirm"-->
-<!--                                android:src="@drawable/showeye"/>-->
-<!--                        </LinearLayout>-->
 
                         <Button
                             android:id="@+id/btnRegister"
