--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -7,39 +7,51 @@
     android:layout_marginTop="5dp"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:src="@drawable/user"/>
-
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="8dp"
-        app:cardBackgroundColor="#EEEEEE"
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
+        app:cardBackgroundColor="#BBE2F5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgUSCM"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/user"/>
+        <ImageView
+            android:minWidth="30dp"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="2dp"
+            android:src="@drawable/feedbackcmt"/>
         <LinearLayout
-            android:padding="5dp"
             android:orientation="vertical"
+            android:paddingLeft="35dp"
+            android:paddingRight="5dp"
+            android:layout_marginBottom="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
-
             <TextView
+                android:id="@+id/txtTenCM"
+                android:paddingRight="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="anh abc"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_marginTop="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="san pham nay tot"
+                android:text="anh dfdg"
                 android:textColor="#000000"
                 android:textSize="16dp"
+                android:textStyle="bold" />
+            <TextView
+
+                android:id="@+id/txtSTT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="san pham chan nam "
+                android:textColor="#333333"
+                android:textSize="18dp"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
