--- a/app/src/main/res/layout/activity_chitietsp.xml
+++ b/app/src/main/res/layout/activity_chitietsp.xml
@@ -26,9 +26,6 @@
             android:textStyle="bold" />
 
     </androidx.appcompat.widget.Toolbar>
-
-
-
     <ImageView
         android:id="@+id/imgProduct"
         android:src="@drawable/iphone13"
@@ -135,16 +132,29 @@
                     android:textSize="20dp" />
 <!--            </ScrollView>-->
 
-            <TextView
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_weight="10"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Phản hồi và đánh giá"
-                android:textSize="20dp"
-                android:drawableLeft="@drawable/cmt"
-                android:drawablePadding="10dp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/comm"
+                    android:layout_gravity="bottom"/>
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Phản hồi và đánh giá"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="5dp"
+                    android:drawablePadding="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -155,11 +165,12 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtComment"
                 android:layout_width="60dp"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:layout_weight="9"
-                android:paddingLeft="20dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/bg_cmt"
-                android:hint="Phản hồi"
+                android:hint="Phản hồi ★★★★★"
              />
                 <ImageView
                     android:id="@+id/imgSend"
