--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -232,7 +232,7 @@
             android:textAlignment="center"
             android:layout_gravity="center"
             android:textSize="17dp"
-            android:textStyle="bold"
+            android:textStyle="italic"
             android:textColor="#00a5ff"
             android:text="Bạn chưa thêm sản phẩm vào giỏ hàng."/>
         <androidx.recyclerview.widget.RecyclerView
