--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,14 +8,6 @@
     android:orientation="vertical"
     tools:context=".User.Fragment.OrderFragment">
 
-    <FrameLayout
-        android:id="@+id/fragmentOrderSucess"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarCTSP"
         android:layout_width="match_parent"
@@ -28,19 +20,22 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:maxLines="1"
-            android:text="Trạng thái Đơn hàng"
+            android:text="Trạng thái đơn hàng"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
-    <TextView
-        android:text="Danh sách các đơn hàng đã đặt"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_margin="10dp"
-        android:textColor="@color/black"
+
+    <com.tomer.fadingtextview.FadingTextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold|italic"
+        app:texts="@array/textoder"
+        app:timeout="2000" />
 
     <RelativeLayout
         android:layout_marginBottom="10dp"
@@ -69,26 +64,22 @@
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="10"
-       android:layout_marginLeft="10dp"
-       android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnLienheOrder"
-           android:layout_weight="5"
            android:layout_width="match_parent"
-           android:layout_height="50dp"
+           android:layout_height="48dp"
            android:background="@drawable/bg_trangthaidonhang"
            android:gravity="center"
            android:text="Liên hệ"
-           android:layout_marginLeft="5dp"
+           android:layout_marginLeft="25dp"
+           android:layout_marginRight="25dp"
            android:textColor="#ffffff"
            android:textAllCaps="false"
-           android:textSize="16dp"
+           android:textSize="18dp"
             />
    </LinearLayout>
     </RelativeLayout>
-        </LinearLayout>
-    </FrameLayout>
 </LinearLayout>
